--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='main.css')}}">
+    
 
     {% if title %}
         <title>{{title}}</title>
@@ -27,11 +29,19 @@
               <div class="navbar-nav mr-auto">
                 <a class="nav-item nav-link" href="{{ url_for('home')}}">Home</a>
                 <a class="nav-item nav-link" href="{{ url_for('about')}}">About</a>
+                {% if current_user.is_authenticated %}
+                  <a class="nav-item nav-link" href="{{ url_for('models')}}">Models</a>
+                {% endif %}
               </div>
               <!-- Navbar Right Side -->
               <div class="navbar-nav">
-                <a class="nav-item nav-link" href="{{ url_for('login')}}">Login</a>
-                <a class="nav-item nav-link" href="{{ url_for('register')}}">Register</a>
+                {% if current_user.is_authenticated %}
+                <a class="nav-item nav-link" href="{{ url_for('account')}}">Account</a>
+                  <a class="nav-item nav-link" href="{{ url_for('logout')}}">Logout</a>
+                {% else %}
+                  <a class="nav-item nav-link" href="{{ url_for('login')}}">Login</a>
+                  <a class="nav-item nav-link" href="{{ url_for('register')}}">Register</a>
+                {% endif %}
               </div>
             </div>
           </div>
@@ -42,19 +52,21 @@
           <div class="col-md-8">
             {% block content %}{% endblock %}
           </div>
-          <div class="col-md-4">
-            <div class="content-section">
-              <h3>Our Sidebar</h3>
-              <p class='text-muted'>You can put any information here you'd like.
-                <ul class="list-group">
-                  <li class="list-group-item list-group-item-light">Latest Posts</li>
-                  <li class="list-group-item list-group-item-light">Announcements</li>
-                  <li class="list-group-item list-group-item-light">Calendars</li>
-                  <li class="list-group-item list-group-item-light">etc</li>
-                </ul>
-              </p>
+          {% if current_user.is_authenticated %}
+            <div class="col-md-4">
+              <div class="content-section">
+                <h3>Our Sidebar</h3>
+                <p class='text-muted'>You can put any information here you'd like.
+                  <ul class="list-group">
+                    <a class="list-group-item list-group-item-light">Latest Posts</a>
+                    <li class="list-group-item list-group-item-light">Announcements</li>
+                    <a class="list-group-item list-group-item-light">Calendars</a>
+                    <li class="list-group-item list-group-item-light">etc</li>
+                  </ul>
+                </p>
+              </div>
             </div>
-          </div>
+          {% endif %}
         </div>
       </main>
 
