added create new post functionality

--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -14,8 +14,8 @@
     <article class="media content-section">
         <div class="media-body">
           <div class="article-metadata">
-            <a class="mr-2" href="#">{{ p.author }}</a>
-            <small class="text-muted">{{ p.date }}</small>
+            <a class="mr-2" href="#">{{ p.author.firstname }} {{p.author.lastname}}</a>
+            <small class="text-muted">{{ p.date_posted }}</small>
           </div>
           <h2><a class="article-title" href="#">{{ p.title }}</a></h2>
           <p class="article-content">{{ p.content }}</p>
