--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -10,18 +10,30 @@
             {% endfor %}
         {% endif %}
     {% endwith %}
-    {% for p in post %}
+    {% for p in post.items %}
     <article class="media content-section">
         <img class="rounded-circle article-img" src="{{ url_for('static',filename = 'profile_pics/' + p.author.image_file) }}" alt="">
         <div class="media-body">
           <div class="article-metadata">
-            <a class="mr-2" href="#">{{ p.author.firstname }} {{p.author.lastname}}</a>
+            <a class="mr-2" href="{{url_for('account',account_id = p.author.id)}}">{{ p.author.firstname }} {{p.author.lastname}}</a>
             <small class="text-muted">{{ p.date_posted.strftime("%d/%m/%Y") }}</small>
           </div>
           <h2><a class="article-title" href="{{ url_for('post', post_id = p.id) }}">{{ p.title }}</a></h2>
           <p class="article-content">{{ p.content }}</p>
         </div>
     </article>
+    {% endfor %}
+
+    {% for page_num in post.iter_pages(left_edge=1,right_edge=1,left_current=1,right_current = 1) %}
+        {% if page_num %}
+            {% if post.page == page_num %}
+                <a class="btn btn-info mb-4" href="{{url_for('home',page=page_num)}}">{{page_num}}</a>
+            {% else %}
+                <a class="btn btn-outline-info mb-4" href="{{url_for('home',page=page_num)}}">{{page_num}}</a>
+            {% endif %}
+        {% else %}
+            ...
+        {% endif %}
     {% endfor %}
     
 {% endblock content %}
