--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -37,7 +37,7 @@
               <div class="navbar-nav">
                 {% if current_user.is_authenticated %}
                 <a class="nav-item nav-link" href="{{ url_for('new_post')}}">New Post</a>
-                <a class="nav-item nav-link" href="{{ url_for('account')}}">Account</a>
+                <a class="nav-item nav-link" href="{{ url_for('account',account_id = current_user.id)}}">Account</a>
                   <a class="nav-item nav-link" href="{{ url_for('logout')}}">Logout</a>
                 {% else %}
                   <a class="nav-item nav-link" href="{{ url_for('login')}}">Login</a>
