--- a/flaskblog/static/main.css
+++ b/flaskblog/static/main.css
@@ -78,3 +78,8 @@ body {
   .account-heading {
     font-size: 2.5rem;
   }
+
+  .right-align {
+      text-align: right;
+      margin-top: 0px; 
+  }
