--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -48,10 +48,10 @@
             </fieldset>
             <div class = "form-group">
                 {{form.submit(class = "btn btn-outline-info")}}
+                <small class="text-muted ml-2">
+                    <a href="{{url_for('resetpasswordform')}}">Forgot Password ?</a>
+                </small>
             </div>
-            <small class="text-muted ml-2">
-                <a href="#">Forgot Password ?</a>
-            </small>
         </form>
     </div>
     <div class="border-top pt-3">
