taking email and generating token

--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -49,7 +49,7 @@
             <div class = "form-group">
                 {{form.submit(class = "btn btn-outline-info")}}
                 <small class="text-muted ml-2">
-                    <a href="{{url_for('resetpasswordform')}}">Forgot Password ?</a>
+                    <a href="{{url_for('resetpasswordemail')}}">Forgot Password ?</a>
                 </small>
             </div>
         </form>
