--- a/flaskblog/templates/resetpasswordemail.html
+++ b/flaskblog/templates/resetpasswordemail.html
@@ -14,7 +14,7 @@
     <form action="" method="post">
         {{form.hidden_tag()}}
         <fieldset class="form-group">
-            <legend class="border-bottom pt-2 mb-4">Reset Password</legend>
+            <legend class="border-bottom pt-2 mb-4">Email To Reset Password</legend>
             <p>Enter the email associated with your account.</p>
             <div class="form-group pt-2">
                 {{form.email.label(class="form-control-label")}}
